# farmer_profile_nidp_service

./: .dockerignore  .env.example  Dockerfile  Dockerfile.local  README.md  docker-compose.host.yml  docker-compose.yml  pyproject.toml
scripts/: clear_seed_farmer_ids.py  seed_local_pipeline_test_records.py
src/openg2p_farmer_profile_dedup/: app.py  config.py  engine.py  main.py
src/openg2p_farmer_profile_dedup/controllers/: __init__.py  farmer_approval.py  health.py  mock_nidp.py  national_id_dedup.py
src/openg2p_farmer_profile_dedup/repositories/: __init__.py  farmer_approval_repository.py  farmer_id_repository.py  farmer_update_repository.py  lock_repository.py  log_repository.py
src/openg2p_farmer_profile_dedup/schemas/: __init__.py  approval.py  dedup.py  nidp.py
src/openg2p_farmer_profile_dedup/services/: __init__.py  background_worker.py  farmer_approval_service.py  farmer_approval_worker.py  national_id_dedup_service.py  nidp_client.py  response_transformer.py
src/openg2p_farmer_profile_dedup/utils/: chunks.py  farmer_approval_validator.py
tests/: test_farmer_approval_validator.py  test_farmer_id_repository.py  test_mock_nidp.py  test_national_id_dedup_service.py  test_response_transformer.py
